# openrtb-rust

./: Cargo.toml  catalog-info.yaml
.github/workflows/: ci.yaml
examples/: prebid.rs
src/: macros.rs  serde_utils.rs
src/native/v1_2/: mod.rs
src/v2_5/: app.rs  audio.rs  banner.rs  bid.rs  bid_request.rs  bid_response.rs  category.rs  content.rs  data.rs  device.rs  format.rs  imp.rs  metric.rs  mod.rs  native.rs  pmp.rs  publisher.rs  regulations.rs  seat_bid.rs  segment.rs  site.rs  source.rs  supply_chain.rs  user.rs  video.rs
tests/: test_files.rs
tests/files/aps/: request.json  response.json
